# proxysrv

./: proxysrv.cabal  stack.yaml
app/: Main.hs
