name:                proxysrv
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/tobiasgwaaler/proxysrv#readme
license:             BSD3
license-file:        LICENSE
author:              Tobias G. Waaler
maintainer:          tobiasgwaaler@gmail.com
copyright:           2016 Tobias G. Waaler
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable proxysrv
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , http-reverse-proxy
                     , wai
                     , warp
                     , http-client
                     , mtl
                     , case-insensitive
                     , bytestring
                     , wai-extra
                     , optparse-generic
  default-language:    Haskell2010

test-suite proxysrv-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tobiasgwaaler/proxysrv
